--- a/index.html
+++ b/index.html
@@ -1,19 +1,22 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Epicglider</title>
+    <title>Kai Tucker</title>
 </head>
 <body>
-    <h1>Epicglider Elusive Glider of the Skies</h1>
-    <p>Epiglider Man in the sky. Can see any natural disaster like a hurricane from miles away.</p>
+    <h1>Kai Tucker the Elite Assassin</h1>
+    <p>Kai Tucker moves through the night assassinating criminals. Can see any natural disaster like a hurricane from miles away. Improvised link to animated gif https://drive.google.com/drive/folders/1NRYI7PMScZA2tHGvtwKDMqopQiXBxvdT?usp=sharing. Improvised link to Final project https://www.youtube.com/watch?v=Sf9kTXFB0Nk</p>
+
+    <p>Improvised link to Vector Image, Photoshop Image, and Audio. https://drive.google.com/drive/folders/1Y3IdG0z_b3vHbO_sLPdGevzfCy1w2oKD?usp=sharing</p>
+
 <img src="images/Hang Gliding.jpg" width="400px" alt="Epicglider">
 <br>
-<a href="https://www.flickr.com/photos/28851385@N00/18292645%22%3E%22The Hangliding Man" by jordonfischer is licensed with CC BY 2.0</a>
+<a href="https://www.flickr.com/photos/28851385@N00/18292645%22%3E%22The Hangliding </a>
     <br>
     <ul>
-            <li><a href="sounds.html">Sounds</a></li>
-            <li><a href="place.html">Place</a></li>
+            <li><a href="noises.html">Noises</a></li>
+            <li><a href="domain.html">Domain</a></li>
             <li><a href="ability.html">Ability</a></li>
             <li><a href="power.html">Power</a></li>
         </ul>
-</bod
+</body
