--- a/ability.html
+++ b/ability.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Epicglider Abilities</title>
+<title>Kai Tucker Abilities</title>
 </head>
 <body>
-	<h1>Abilities of The Epicglider</h1>
-	<p>The abilites of the epicglider vary and are very useful in combat.</p>
+	<h1>Abilities of The Kai Tucker</h1>
+	<p>The abilites of Kai vary and are very useful in combat.</p>
 <img src="Epicglider Abilities.jpg" width="400px" alt="Epicglider Abilities"
 <br>
 <a href="https://www.flickr.com/photos/43239824@N00/117768119" by M Kuhn is licensed under CC BY-NC-SA 2.0</a>
