Update and rename place.html to domain.html

--- a/domain.html
+++ b/domain.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Epicglider Domain</title>
+<title>Kai Tucker Domain</title>
 </head>
 <body>
-	<h1>Secret Domain of the Epicglider</h1>
-	<p>The Domain of the Epicglider is so hidden it would take the best eyes to see it.</p>
+	<h1>Secret Domain of Kai Tucker</h1>
+	<p>The Domain of Kai Tucker is so hidden it would take the best eyes to see it.</p>
 <img src="Epicglider Domain.jpg" width="400px" alt="Epicglider Domain"
 <br>
 <a href="https://www.flickr.com/photos/99649389@N02/13484692034"  by darkday. is licensed under CC BY 2.0</a>
