Update and rename sounds.html to noises.html

--- a/noises.html
+++ b/noises.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Epicglider Noises</title>
+<title>Kai Tucker Fighting Theme Noises</title>
 </head>
 <body>
-	<h1>Distinct Noises of Epicglider</h1>
-	<p>When the epicglider is gliding throught he sky a very faint sound can be heard. Almost as if you could hear an extremely faint zipping noise.</p>
+	<h1>Distinct Noises of Kai Tucker</h1>
+	<p>When the Kai is flying through the sky a very faint sound can be heard. Almost as if you could hear an extremely faint zipping noise.</p>
 <img src="images/Glider Sounds.jpg" width="400px" alt= "Epicglider Noises" 
 <br>
 <a href="https://www.flickr.com/photos/66289072@N08/7912137730" by BombartZ is licensed under CC BY-NC 2.0</a>
