--- a/power.html
+++ b/power.html
@@ -1,11 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Epicglider Powers</title>
+<title>Kai Tucker Powers</title>
 </head>
 <body>
-	<h1>The Unique Powers Of The Epicglider</h1>
-	<p>The powers of the Epicglider are like no other and are unique in their own way.</p>
+	<h1>The Unique Powers Of Kai Tucker</h1>
+	<p>The powers of Kai Tucker are like no other and are unique in their own way.</p>
 <img src="images/Glider Powers.jpg" width="400px" alt= "Epicglider Powers"
 <br>
 <a href="https://www.flickr.com/photos/99649389@N02/16579541280" by darkday is licensed under CC BY 2.0</a>
